# rust-opengl

./: Cargo.toml
examples/: 000-basic-window.rs  001-triangle-arrays.rs  001-triangle-arrays1.rs  002-square-arrays.rs  003-shader-pipeline.rs  004-shader-uniform.rs  005-more-attributes.rs  006_textures.rs  007_color_mixing.rs  008-texture-units.rs
src/: lib.rs
